<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".QuizActivity">

    <TextView
        android:id="@+id/textViewQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:padding="10dp"
        android:text="@string/question_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuizName"
        android:layout_width="334dp"
        android:layout_height="63dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/quiz_name_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.486"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewQuestionNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/question_number_placeholder"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewQuizName"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/textViewQuizName"
        app:layout_constraintTop_toBottomOf="@+id/textViewQuizName" />

    <ImageButton
        android:id="@+id/imageButtonDisagree"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/disagree_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/disagree"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonNeutral"
        app:layout_constraintHorizontal_bias="0.941"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageButtonNeutral" />

    <ImageButton
        android:id="@+id/imageButtonNeutral"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginTop="420dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/neutral_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/neutral"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonAgree"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginStart="4dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/agree_image_desc"
        android:scaleType="fitCenter"
        android:src="@drawable/agree"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/imageButtonNeutral"
        app:layout_constraintTop_toTopOf="@+id/imageButtonNeutral" />

    <TextView
        android:id="@+id/textViewDisagree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/disagree"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonDisagree"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageButtonDisagree"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonDisagree" />
    />

    <TextView
        android:id="@+id/textViewNeutral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/neutral"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonNeutral"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageButtonNeutral"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonNeutral" />

    <TextView
        android:id="@+id/textViewAgree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/agree"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonAgree"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="@+id/imageButtonAgree"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonAgree" />

</androidx.constraintlayout.widget.ConstraintLayout>