<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".QuizListActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewQuizzes"
        android:layout_width="match_parent"
        android:layout_height="625dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/quiz_item" />

    <Button
        android:id="@+id/copyIdButton"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:text="@string/copy_my_id"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_out"
        app:layout_constraintEnd_toEndOf="@+id/sendToServerButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/sendToServerButton"
        app:layout_constraintTop_toTopOf="@+id/sendToServerButton" />

    <Button
        android:id="@+id/sendToServerButton"
        android:layout_width="141dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/send_to_server"
        app:layout_constraintEnd_toEndOf="@+id/copyIdButton"
        app:layout_constraintStart_toStartOf="@+id/copyIdButton"
        app:layout_constraintTop_toTopOf="@+id/copyIdButton" />

</androidx.constraintlayout.widget.ConstraintLayout>